--- a/src/panels/home.html
+++ b/src/panels/home.html
@@ -3,7 +3,7 @@
     <div class="status-server">
         <img class="server-status-icon" src="assets/images/icon.png">
         <div class="server-status-infos">
-            <div class="server-status-name">Minecraft</div>
+            <div class="server-status-name">minecraft</div>
             <div class="server-status-text">Opérationnel - 0 ms</div>
         </div>
         <div class="status-player-count">
